[gd_scene load_steps=10 format=3 uid="uid://ma228mriiyji"]

[ext_resource type="Texture2D" uid="uid://g8uhandsbu7d" path="res://assets/tiles/surprise.png" id="1_d3w5a"]
[ext_resource type="Script" uid="uid://dig18bl1o8did" path="res://scripts/surprise_block.gd" id="1_od2x7"]

[sub_resource type="Animation" id="Animation_6o6qa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SurpriseBlockSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SurpriseBlockCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_od2x7"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SurpriseBlockSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SurpriseBlockCollision:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.16666667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ohp6l"]
_data = {
&"RESET": SubResource("Animation_6o6qa"),
&"hit": SubResource("Animation_od2x7")
}

[sub_resource type="Animation" id="Animation_ohp6l"]
resource_name = "blink"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebqsm"]
_data = {
&"blink": SubResource("Animation_ohp6l")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_od2x7"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6o6qa"]
size = Vector2(64, 2)

[node name="SurpriseBlock" type="StaticBody2D"]
script = ExtResource("1_od2x7")

[node name="SurpriseBlockSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_d3w5a")

[node name="AnimationHit" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ohp6l")
}

[node name="AnimationBlink" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ebqsm")
}

[node name="SurpriseBlockCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_od2x7")

[node name="SurpriseBlockHitArea" type="Area2D" parent="."]

[node name="HitCollision" type="CollisionShape2D" parent="SurpriseBlockHitArea"]
position = Vector2(0, 33)
shape = SubResource("RectangleShape2D_6o6qa")
debug_color = Color(0.71920705, 0.38138023, 0.7546973, 0.41960785)

[connection signal="body_entered" from="SurpriseBlockHitArea" to="." method="_on_area_2d_body_entered"]
